force-app/main/default/objects/Documento_Expediente__mdt/Documento_Expediente__mdt.object-meta.xml
<CustomObject>
    <label>Documento Expediente</label>
    <pluralLabel>Documentos Expediente</pluralLabel>
</CustomObject>