force-app/main/default/objects/Documento_Expediente__mdt/fields/Categoria__c.field-meta.xml
<CustomField>
    <fullName>Categoria__c</fullName>
    <label>Categoría</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>