force-app/main/default/objects/Documento_Expediente__mdt/fields/Obligatorio__c.field-meta.xml
<CustomField>
    <fullName>Obligatorio__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Obligatorio</label>
    <type>Checkbox</type>
</CustomField>