force-app/main/default/objects/Documento_Expediente__mdt/fields/Tag__c.field-meta.xml
<CustomField>
    <fullName>Tag__c</fullName>
    <label>Tag</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>